manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "demoaks-3109"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "demoaks-3109"
  template:
    metadata:
      labels:
        app: "demoaks-3109"
    spec:
      containers:
        - name: "demoaks-3109"
          image: "cloudwebsite.azurecr.io/demoaks"
          ports:
          - containerPort: 80
