manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "demoaks-3109"
    labels:
        app: "demoaks-3109"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: demoaks98c8-demoaks-3109.b02bc069ed0344bb9cc8.southafricanorth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "demoaks-3109"
                servicePort: 80
